# ppt-gen

./: .CLAUDE.md  .gitignore  agent.py  agentic_customer_document_generator_5d876b4d.plan.md  app.py  app_presenton.py  chainlit.md  config.py  generate_descriptions.py  improvements.md  indexer.py  pptx_generator.py  presenton_client.py  pyproject.toml  requirements.txt  retriever.py  scraper.py  sources.json  tools.py
.claude/: settings.local.json
.claude/agents/: codebase-improvement-analyst.md
Sources/Articles/: Amur Lakshminarayanan Interview.url  Backbase - 10 Generative AI Use Cases in Banking.url  Bank of America - Erica Virtual Financial Assistant.url
Sources/Case Studies/: Axis Bank - Case Study.url  Bold360 AI - ICICI Bank Completely Revamps Customer Service with AI.url  McKinsey - An Inside Look at How McKinsey Helped DBS Become an AI-Powered Bank.url  Partnership on AI - Axis Bank AI Labor Studies.url  SBI - Digital Transformation and Financial Inclusion.url
Sources/Our Solutions/: AI-Enabled Sales Support Initiative.docx
knowledge_base/chroma_db/: chroma.sqlite3
